@@ -1,0 +1,3 @@
+package Discr8_Pkg3 is
+  function Value return Natural;
+end Discr8_Pkg3;
