@@ -1,3 +1,8 @@
+2008-05-15  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/discr8.ad[sb]: New test.
+	* gnat.dg/discr8_pkg[123].ads: New helpers.
+
 2008-05-14  Ira Rosen  <irar@il.ibm.com>
 
 	PR tree-optimization/36098
